<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
             android:layout_width="match_parent">

            <TextView
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome to JobComparator!"
                android:textSize="30sp"
                />

        </androidx.appcompat.widget.Toolbar>



        <Button
            android:id="@+id/enterEditJobBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="25sp"
            android:onClick="handleClick"
            android:text="Enter or Edit Current Job Details" />

        <Button
            android:id="@+id/enterOfferBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="25sp"
            android:onClick="handleClick"
            android:text="Enter Job Offers" />

        <Button
            android:id="@+id/adjustSettingBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="25sp"
            android:onClick="handleClick"
            android:text="Adjust Comparison Settings" />

        <Button
            android:id="@+id/compareJobsBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="25sp"
            android:onClick="handleClick"
            android:text="Compare Job Offers" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>