<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="110dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/cellTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textStyle="bold"
            android:maxLines="1"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/cellCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Company"
            android:textStyle="bold"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"/>

</LinearLayout>