...
                android:text="Compare Jobs"
                android:textSize="30sp"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="returnToMain"
                android:text="Back"
                android:textSize="12sp" />

...
                android:textSize="12sp"
                android:layout_gravity="end"/>

        </androidx.appcompat.widget.Toolbar>

        <ListView
            android:id="@+id/jobsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:dividerHeight="3dp"
            />

...
