<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="COMPARE"
                android:textSize="30sp"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="returnToMain"
                android:text="Back"
                android:textSize="12sp" />

<!--            <Button-->
<!--                android:id="@+id/compareBtn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:onClick="/"-->
<!--                android:text="Compare"-->
<!--                android:textSize="12sp"-->
<!--                android:layout_gravity="end"/>-->

        </androidx.appcompat.widget.Toolbar>

        <ListView
            android:id="@+id/jobsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:dividerHeight="3dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>